few more solved

--- a/DayWiseMaterial/Assignments/20th_Oct_OOPs_Assignment2.ipynb
+++ b/DayWiseMaterial/Assignments/20th_Oct_OOPs_Assignment2.ipynb
@@ -4103,10 +4103,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Area: 78.5\n",
+      "Area: 24\n",
+      "Area: 12.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Shape:\n",
+    "    def area(self):\n",
+    "        pass\n",
+    "\n",
+    "class Circle(Shape):\n",
+    "    def __init__(self, radius):\n",
+    "        self.radius = radius\n",
+    "\n",
+    "    def area(self):\n",
+    "        return 3.14 * self.radius**2\n",
+    "\n",
+    "class Rectangle(Shape):\n",
+    "    def __init__(self, length, width):\n",
+    "        self.length = length\n",
+    "        self.width = width\n",
+    "\n",
+    "    def area(self):\n",
+    "        return self.length * self.width\n",
+    "\n",
+    "class Triangle(Shape):\n",
+    "    def __init__(self, base, height):\n",
+    "        self.base = base\n",
+    "        self.height = height\n",
+    "\n",
+    "    def area(self):\n",
+    "        return 0.5 * self.base * self.height\n",
+    "\n",
+    "# Usage\n",
+    "circle = Circle(5)\n",
+    "rectangle = Rectangle(4, 6)\n",
+    "triangle = Triangle(3, 8)\n",
+    "\n",
+    "shapes = [circle, rectangle, triangle]\n",
+    "\n",
+    "for shape in shapes:\n",
+    "    print(f\"Area: {shape.area()}\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -4118,7 +4165,25 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "*Ans:*\n",
+    "\n",
+    "**Polymorphism** offers several benefits in Python programs, primarily in terms of code reusability and flexibility:\n",
+    "\n",
+    "**Code Reusability**: Polymorphism allows you to write reusable code that can work with objects of different classes as long as they adhere to a common interface (i.e., implement the same methods). This means you can create functions or modules that can be used with a wide range of objects, promoting modular and reusable code.\n",
+    "\n",
+    "**Reduced Redundancy**: Without polymorphism, you might need to write separate code to handle different types of objects. With polymorphism, you can avoid redundant code and write more compact and efficient solutions.\n",
+    "\n",
+    "**Flexibility**: Polymorphism makes your code more flexible and adaptable to changes. You can easily add new classes or modify existing ones without affecting the core logic of your program, as long as they conform to the same interface.\n",
+    "\n",
+    "**Improved Readability**: Polymorphism can make your code more readable and intuitive. When you see a method call on an object, you don't need to know the specific class; you can rely on the common interface, making code easier to understand.\n",
+    "\n",
+    "**Easier Maintenance**: Since polymorphism promotes modularity and reduces redundancy, it simplifies maintenance. Changes or bug fixes can often be localized to specific classes, reducing the risk of unintended side effects in other parts of your code.\n",
+    "\n",
+    "**Interface-Based Programming**: Polymorphism encourages interface-based programming, where you focus on defining the expected behavior (methods) rather than the specific implementations. This allows multiple developers to work on different parts of a project independently, as long as they adhere to the agreed-upon interface.\n",
+    "\n",
+    "**Support for Open-Closed Principle**: Polymorphism supports the open-closed principle, one of the SOLID principles of object-oriented design. It allows you to extend the behavior of a program by adding new classes or methods without modifying existing code, reducing the risk of introducing errors."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -4131,29 +4196,172 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 14. Create a Python class hierarchy for a banking system with various account types (e.g., savings, checking, credit card) and demonstrate polymorphism by implementing a common `withdraw()` method.\n",
-    "### 15. Describe the concept of operator overloading in Python and how it relates to polymorphism. Provide examples using operators like `+` and `*`.\n",
-    "### 16. What is dynamic polymorphism, and how is it achieved in Python?\n",
-    "### 17. Create a Python class hierarchy for employees in a company (e.g., manager, developer, designer) and implement polymorphism through a common `calculate_salary()` method.\n",
-    "### 18. Discuss the concept of function pointers and how they can be used to achieve polymorphism in Python.\n",
-    "### 19. Explain the role of interfaces and abstract classes in polymorphism, drawing comparisons between them.\n",
-    "### 20. Create a Python class for a zoo simulation, demonstrating polymorphism with different animal types (e.g., mammals, birds, reptiles) and their behavior (e.g., eating, sleeping, making sounds)."
+    "*Ans:*\n",
+    "\n",
+    "The **`super()`** function in Python is used to call methods from a parent or superclass in the context of inheritance and polymorphism. It helps in achieving method overriding, where a subclass provides a specific implementation of a method that is already defined in its superclass.\n",
+    "\n",
+    "Here's how `super()` works and its role in polymorphism:\n",
+    "\n",
+    "**Accessing Parent Class Methods**: When you override a method in a subclass, you can use `super()` to call the overridden method in the parent class. This allows you to reuse the functionality provided by the parent class while adding or modifying behavior specific to the subclass.\n",
+    "\n",
+    "**Method Overriding**: By calling the parent class's method using `super()`, you can implement method overriding. This is a key aspect of polymorphism, where objects of different classes can be treated interchangeably if they adhere to a common interface.\n",
+    "\n",
+    "**Chaining Superclasses**: If you have a chain of inheritance with multiple superclasses, super() allows you to call methods from the immediate parent class, and those methods can, in turn, call methods from their parent classes, creating a hierarchy of method calls.\n",
+    "\n",
+    "Example of usage of `super()`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dog barks, and also, Animal speaks\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Animal:\n",
+    "    def speak(self):\n",
+    "        return \"Animal speaks\"\n",
+    "\n",
+    "class Dog(Animal):\n",
+    "    def speak(self):\n",
+    "        # Call the parent class method\n",
+    "        parent_result = super().speak()\n",
+    "        return f\"Dog barks, and also, {parent_result}\"\n",
+    "\n",
+    "\n",
+    "dog = Dog()\n",
+    "print(dog.speak())\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 14. Create a Python class hierarchy for a banking system with various account types (e.g., savings, checking, credit card) and demonstrate polymorphism by implementing a common `withdraw()` method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Account Number: SA123\n",
+      "Withdrawal of $500 successful. New balance: $500\n",
+      "\n",
+      "Account Number: CA451\n",
+      "Withdrawal of $500 successful. New balance: $1500\n",
+      "\n",
+      "Account Number: CC786\n",
+      "Withdrawal of $500 successful. New balance: $0\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "class BankAccount:\n",
+    "    def __init__(self, account_number, initial_balance):\n",
+    "        self.__account_number = account_number\n",
+    "        self._balance = initial_balance\n",
+    "\n",
+    "    def get_account_number(self):\n",
+    "        return self.__account_number\n",
+    "\n",
+    "    def get_balance(self):\n",
+    "        return self._balance\n",
+    "\n",
+    "    def withdraw(self, amount):\n",
+    "        pass\n",
+    "\n",
+    "class SavingsAccount(BankAccount):\n",
+    "    def withdraw(self, amount):\n",
+    "        if self.get_balance() >= amount:\n",
+    "            self._balance -= amount\n",
+    "            return f\"Withdrawal of ${amount} successful. New balance: ${super().get_balance()}\"\n",
+    "        else:\n",
+    "            return \"Insufficient funds for withdrawal.\"\n",
+    "\n",
+    "class CheckingAccount(BankAccount):\n",
+    "    def withdraw(self, amount):\n",
+    "        if self.get_balance() >= amount:\n",
+    "            self._balance -= amount\n",
+    "            return f\"Withdrawal of ${amount} successful. New balance: ${self.get_balance()}\"\n",
+    "        else:\n",
+    "            return \"Insufficient funds for withdrawal.\"\n",
+    "\n",
+    "class CreditCardAccount(BankAccount):\n",
+    "    def withdraw(self, amount):\n",
+    "        new_balance = self.get_balance() - amount\n",
+    "        if new_balance >= -1000:  # Assuming a credit limit of $1000\n",
+    "            self._balance = new_balance\n",
+    "            return f\"Withdrawal of ${amount} successful. New balance: ${self.get_balance()}\"\n",
+    "        else:\n",
+    "            return \"Credit limit exceeded. Unable to process withdrawal.\"\n",
+    "\n",
+    "# Usage\n",
+    "savings_account = SavingsAccount(\"SA123\", 1000)\n",
+    "checking_account = CheckingAccount(\"CA451\", 2000)\n",
+    "credit_card_account = CreditCardAccount(\"CC786\", 500)\n",
+    "\n",
+    "accounts = [savings_account, checking_account, credit_card_account]\n",
+    "\n",
+    "for account in accounts:\n",
+    "    print(f\"Account Number: {account.get_account_number()}\")\n",
+    "    print(account.withdraw(500))\n",
+    "    print()\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 15. Describe the concept of operator overloading in Python and how it relates to polymorphism. Provide examples using operators like `+` and `*`."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 16. What is dynamic polymorphism, and how is it achieved in Python?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 17. Create a Python class hierarchy for employees in a company (e.g., manager, developer, designer) and implement polymorphism through a common `calculate_salary()` method."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 18. Discuss the concept of function pointers and how they can be used to achieve polymorphism in Python."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 19. Explain the role of interfaces and abstract classes in polymorphism, drawing comparisons between them."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 20. Create a Python class for a zoo simulation, demonstrating polymorphism with different animal types (e.g., mammals, birds, reptiles) and their behavior (e.g., eating, sleeping, making sounds)."
+   ]
   },
   {
    "cell_type": "markdown",
