one more solved

--- a/DayWiseMaterial/Assignments/20th_Oct_OOPs_Assignment2.ipynb
+++ b/DayWiseMaterial/Assignments/20th_Oct_OOPs_Assignment2.ipynb
@@ -4332,8 +4332,72 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "*Ans:*\n",
+    "\n",
+    "**Operator overloading** in Python allows you to define how operators should behave for objects of a user-defined class. This means you can customize the behavior of operators like `+, -, *, /`, etc., to work with your custom objects.\n",
+    "\n",
+    "Here's how operator overloading relates to polymorphism:\n",
+    "\n",
+    "**Polymorphism and Operator Overloading**: Operator overloading is a form of polymorphism because it allows different types or classes to use the same operator in different ways. This enables objects of different classes to interact with operators in a way that makes sense for their context.\n",
+    "\n",
+    "**Customized Behavior**: By overloading operators, you can define what it means to add, subtract, multiply, etc., for objects of your class. This enables you to apply familiar operators to your custom objects, making your code more intuitive and expressive.\n",
+    "\n",
+    "Here's an example using the + and * operators:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vector Addition: (3, 5)\n",
+      "Vector Multiplication: (4, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Vector:\n",
+    "    def __init__(self, x, y):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "\n",
+    "    def __add__(self, other):\n",
+    "        return Vector(self.x + other.x, self.y + other.y)\n",
+    "\n",
+    "    def __mul__(self, scalar):\n",
+    "        return Vector(self.x * scalar, self.y * scalar)\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"({self.x}, {self.y})\"\n",
+    "\n",
+    "# Usage\n",
+    "v1 = Vector(2, 3)\n",
+    "v2 = Vector(1, 2)\n",
+    "\n",
+    "# Adding vectors\n",
+    "result_add = v1 + v2\n",
+    "print(f\"Vector Addition: {result_add}\")\n",
+    "\n",
+    "# Multiplying a vector by a scalar\n",
+    "result_mul = v1 * 2\n",
+    "print(f\"Vector Multiplication: {result_mul}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 16. What is dynamic polymorphism, and how is it achieved in Python?"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
