Abstraction questions completed

--- a/DayWiseMaterial/Assignments/20th_Oct_OOPs_Assignment2.ipynb
+++ b/DayWiseMaterial/Assignments/20th_Oct_OOPs_Assignment2.ipynb
@@ -4397,13 +4397,93 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "*Ans:*\n",
+    "\n",
+    "**Dynamic polymorphism**, also known as runtime polymorphism or late binding, is a fundamental concept in object-oriented programming. It allows objects of different classes to be treated as objects of a common base class. The specific method or function that gets executed when you call it is determined at runtime based on the actual type of the object. Dynamic polymorphism is one of the key features of inheritance and abstraction in object-oriented programming.\n",
+    "\n",
+    "In Python, **dynamic polymorphism is achieved through method overriding**. Method overriding is a feature that allows a subclass to provide a specific implementation of a method that is already defined in its superclass. When you call a method on an object, Python determines at runtime which implementation of the method to execute, based on the actual type of the object."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 17. Create a Python class hierarchy for employees in a company (e.g., manager, developer, designer) and implement polymorphism through a common `calculate_salary()` method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "John Doe's salary: $70000\n",
+      "Jane Smith's salary: $52000\n",
+      "Bob Johnson's salary: $47500\n",
+      "John Doe's updated salary: $75000\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Employee:\n",
+    "    def __init__(self, name, salary):\n",
+    "        self.__name = name\n",
+    "        self.__salary = salary\n",
+    "\n",
+    "    def get_name(self):\n",
+    "        return self.__name\n",
+    "\n",
+    "    def get_salary(self):\n",
+    "        return self.__salary\n",
+    "\n",
+    "    def set_salary(self, new_salary):\n",
+    "        self.__salary = new_salary\n",
+    "\n",
+    "\n",
+    "class Manager(Employee):\n",
+    "    def __init__(self, name, salary, bonus):\n",
+    "        super().__init__(name, salary)\n",
+    "        self.__bonus = bonus\n",
+    "\n",
+    "    def calculate_salary(self):\n",
+    "        return super().get_salary() + self.__bonus\n",
+    "\n",
+    "\n",
+    "class Developer(Employee):\n",
+    "    def __init__(self, name, salary, languages):\n",
+    "        super().__init__(name, salary)\n",
+    "        self.__languages = languages\n",
+    "\n",
+    "    def calculate_salary(self):\n",
+    "        return super().get_salary() + len(self.__languages) * 1000\n",
+    "\n",
+    "\n",
+    "class Designer(Employee):\n",
+    "    def __init__(self, name, salary, experience):\n",
+    "        super().__init__(name, salary)\n",
+    "        self.__experience = experience\n",
+    "\n",
+    "    def calculate_salary(self):\n",
+    "        return super().get_salary() + self.__experience * 500\n",
+    "\n",
+    "\n",
+    "# Create instances of different employees\n",
+    "manager = Manager(\"John Doe\", 60000, 10000)\n",
+    "developer = Developer(\"Jane Smith\", 50000, [\"Python\", \"JavaScript\"])\n",
+    "designer = Designer(\"Bob Johnson\", 45000, 5)\n",
+    "\n",
+    "# Accessing attributes using getters\n",
+    "print(f\"{manager.get_name()}'s salary: ${manager.calculate_salary()}\")\n",
+    "print(f\"{developer.get_name()}'s salary: ${developer.calculate_salary()}\")\n",
+    "print(f\"{designer.get_name()}'s salary: ${designer.calculate_salary()}\")\n",
+    "\n",
+    "# Using setters to modify attributes\n",
+    "manager.set_salary(65000)\n",
+    "print(f\"{manager.get_name()}'s updated salary: ${manager.calculate_salary()}\")\n"
    ]
   },
   {
@@ -4417,6 +4497,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "*Ans:*\n",
+    "\n",
+    "**Function pointers** are a concept commonly found in languages like C and C++. They allow you to store the memory address of a function and call that function indirectly through the pointer. This provides a way to dynamically select and call different functions at runtime.\n",
+    "\n",
+    "In Python, you don't have explicit function pointers like in C or C++. Instead, Python has first-class functions, which means that functions can be treated as objects, assigned to variables, passed as arguments, and returned as values. This enables a form of polymorphism known as \"duck typing.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Addition result: 8\n",
+      "Subtraction result: 2\n",
+      "Multiplication result: 15\n"
+     ]
+    }
+   ],
+   "source": [
+    "def add(x, y):\n",
+    "    return x + y\n",
+    "\n",
+    "def subtract(x, y):\n",
+    "    return x - y\n",
+    "\n",
+    "def multiply(x, y):\n",
+    "    return x * y\n",
+    "\n",
+    "# Define a function that takes two numbers and a function pointer\n",
+    "def calculate(x, y, operation):\n",
+    "    return operation(x, y)\n",
+    "\n",
+    "# Use the calculate function with different operations\n",
+    "result_add = calculate(5, 3, add)\n",
+    "result_subtract = calculate(5, 3, subtract)\n",
+    "result_multiply = calculate(5, 3, multiply)\n",
+    "\n",
+    "print(f\"Addition result: {result_add}\")\n",
+    "print(f\"Subtraction result: {result_subtract}\")\n",
+    "print(f\"Multiplication result: {result_multiply}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 19. Explain the role of interfaces and abstract classes in polymorphism, drawing comparisons between them."
    ]
   },
@@ -4424,7 +4554,111 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "**Interfaces and abstract classes** are both powerful tools that can be used to achieve polymorphism in object-oriented programming. However, they have some key differences.\n",
+    "\n",
+    "**Interfaces** are declarations of behavior, but they do not provide any implementation. This means that any class that implements an interface must provide its own implementation of all of the interface's methods.\n",
+    "\n",
+    "Interfaces are used to define a contract that a class must adhere to. Any class that implements an interface must provide implementations for all the methods defined in the interface.\n",
+    "\n",
+    "**Abstract classes** are similar to interfaces in that they can declare abstract methods. However, abstract classes can also provide concrete implementations of methods. This means that classes that subclass an abstract class can choose to inherit the concrete implementations or provide their own implementations.\n",
+    "\n",
+    "Abstract classes are used when you want to define a common structure or behavior that multiple subclasses share, but each subclass might have its own specific implementation of some methods."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 20. Create a Python class for a zoo simulation, demonstrating polymorphism with different animal types (e.g., mammals, birds, reptiles) and their behavior (e.g., eating, sleeping, making sounds)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lion is eating plants.\n",
+      "Lion is sleeping in a cozy den.\n",
+      "Lion is making mammal sounds.\n",
+      "Eagle is pecking at seeds.\n",
+      "Eagle is roosting in a tree.\n",
+      "Eagle is chirping and singing.\n",
+      "Snake is hunting for insects.\n",
+      "Snake is basking on a rock.\n",
+      "Snake is hissing and rustling.\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Animal:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "\n",
+    "    def eat(self):\n",
+    "        pass\n",
+    "\n",
+    "    def sleep(self):\n",
+    "        pass\n",
+    "\n",
+    "    def make_sound(self):\n",
+    "        pass\n",
+    "\n",
+    "\n",
+    "class Mammal(Animal):\n",
+    "    def eat(self):\n",
+    "        return f\"{self.name} is eating plants.\"\n",
+    "\n",
+    "    def sleep(self):\n",
+    "        return f\"{self.name} is sleeping in a cozy den.\"\n",
+    "\n",
+    "    def make_sound(self):\n",
+    "        return f\"{self.name} is making mammal sounds.\"\n",
+    "\n",
+    "\n",
+    "class Bird(Animal):\n",
+    "    def eat(self):\n",
+    "        return f\"{self.name} is pecking at seeds.\"\n",
+    "\n",
+    "    def sleep(self):\n",
+    "        return f\"{self.name} is roosting in a tree.\"\n",
+    "\n",
+    "    def make_sound(self):\n",
+    "        return f\"{self.name} is chirping and singing.\"\n",
+    "\n",
+    "\n",
+    "class Reptile(Animal):\n",
+    "    def eat(self):\n",
+    "        return f\"{self.name} is hunting for insects.\"\n",
+    "\n",
+    "    def sleep(self):\n",
+    "        return f\"{self.name} is basking on a rock.\"\n",
+    "\n",
+    "    def make_sound(self):\n",
+    "        return f\"{self.name} is hissing and rustling.\"\n",
+    "\n",
+    "\n",
+    "# Create instances of different animals\n",
+    "lion = Mammal(\"Lion\")\n",
+    "eagle = Bird(\"Eagle\")\n",
+    "snake = Reptile(\"Snake\")\n",
+    "\n",
+    "# Perform actions\n",
+    "print(lion.eat())\n",
+    "print(lion.sleep())\n",
+    "print(lion.make_sound())\n",
+    "\n",
+    "print(eagle.eat())\n",
+    "print(eagle.sleep())\n",
+    "print(eagle.make_sound())\n",
+    "\n",
+    "print(snake.eat())\n",
+    "print(snake.sleep())\n",
+    "print(snake.make_sound())\n"
    ]
   },
   {
@@ -4438,26 +4672,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. What is abstraction in Python, and how does it relate to object-oriented programming?\n",
-    "2. Describe the benefits of abstraction in terms of code organization and complexity reduction.\n",
-    "3. Create a Python class called `Shape` with an abstract method `calculate_area()`. Then, create child classes (e.g., `Circle`, `Rectangle`) that implement the `calculate_area()` method. Provide an example of using these classes.\n",
-    "4. Explain the concept of abstract classes in Python and how they are defined using the `abc` module. Provide an example.\n",
-    "5. How do abstract classes differ from regular classes in Python? Discuss their use cases.\n",
-    "6. Create a Python class for a bank account and demonstrate abstraction by hiding the account balance and providing methods to deposit and withdraw funds.\n",
-    "7. Discuss the concept of interface classes in Python and their role in achieving abstraction.\n",
-    "8. Create a Python class hierarchy for animals and implement abstraction by defining common methods (e.g., `eat()`, `sleep()`) in an abstract base class.\n",
-    "9. Explain the significance of encapsulation in achieving abstraction. Provide examples.\n",
-    "10. What is the purpose of abstract methods, and how do they enforce abstraction in Python classes?\n",
-    "11. Create a Python class for a vehicle system and demonstrate abstraction by defining common methods (e.g., `start()`, `stop()`) in an abstract base class.\n",
-    "12. Describe the use of abstract properties in Python and how they can be employed in abstract classes.\n",
-    "13. Create a Python class hierarchy for employees in a company (e.g., manager, developer, designer) and implement abstraction by defining a common `get_salary()` method.\n",
-    "14. Discuss the differences between abstract classes and concrete classes in Python, including their instantiation.\n",
-    "15. Explain the concept of abstract data types (ADTs) and their role in achieving abstraction in Python.\n",
-    "16. Create a Python class for a computer system, demonstrating abstraction by defining common methods (e.g., `power_on()`, `shutdown()`) in an abstract base class.\n",
-    "17. Discuss the benefits of using abstraction in large-scale software development projects.\n",
-    "18. Explain how abstraction enhances code reusability and modularity in Python programs.\n",
-    "19. Create a Python class for a library system, implementing abstraction by defining common methods (e.g., `add_book()`, `borrow_book()`) in an abstract base class.\n",
-    "20. Describe the concept of method abstraction in Python and how it relates to polymorphism.\n"
+    "### 1. What is abstraction in Python, and how does it relate to object-oriented programming?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Describe the benefits of abstraction in terms of code organization and complexity reduction."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Create a Python class called `Shape` with an abstract method `calculate_area()`. Then, create child classes (e.g., `Circle`, `Rectangle`) that implement the `calculate_area()` method. Provide an example of using these classes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Explain the concept of abstract classes in Python and how they are defined using the `abc` module. Provide an example."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. How do abstract classes differ from regular classes in Python? Discuss their use cases."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6. Create a Python class for a bank account and demonstrate abstraction by hiding the account balance and providing methods to deposit and withdraw funds."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### 7. Discuss the concept of interface classes in Python and their role in achieving abstraction.\n",
+    "### 8. Create a Python class hierarchy for animals and implement abstraction by defining common methods (e.g., `eat()`, `sleep()`) in an abstract base class.\n",
+    "### 9. Explain the significance of encapsulation in achieving abstraction. Provide examples.\n",
+    "### 10. What is the purpose of abstract methods, and how do they enforce abstraction in Python classes?\n",
+    "### 11. Create a Python class for a vehicle system and demonstrate abstraction by defining common methods (e.g., `start()`, `stop()`) in an abstract base class.\n",
+    "### 12. Describe the use of abstract properties in Python and how they can be employed in abstract classes.\n",
+    "### 13. Create a Python class hierarchy for employees in a company (e.g., manager, developer, designer) and implement abstraction by defining a common `get_salary()` method.\n",
+    "### 14. Discuss the differences between abstract classes and concrete classes in Python, including their instantiation.\n",
+    "### 15. Explain the concept of abstract data types (ADTs) and their role in achieving abstraction in Python.\n",
+    "### 16. Create a Python class for a computer system, demonstrating abstraction by defining common methods (e.g., `power_on()`, `shutdown()`) in an abstract base class.\n",
+    "### 17. Discuss the benefits of using abstraction in large-scale software development projects.\n",
+    "### 18. Explain how abstraction enhances code reusability and modularity in Python programs.\n",
+    "### 19. Create a Python class for a library system, implementing abstraction by defining common methods (e.g., `add_book()`, `borrow_book()`) in an abstract base class.\n",
+    "### 20. Describe the concept of method abstraction in Python and how it relates to polymorphism."
    ]
   },
   {
